# newsletter-automation

./: .env.example  Dockerfile  main.py  pyproject.toml  test.md
src/: __init__.py  prompt.py  research_agent.py
tests/: test_research_agent_compile.py
